Version 32    2014-February-14

--Client support for not specifying a skip in the first house list fetched,
  allowing the server to pick a good page in the house list based on the
  player's current house value.  The player can then scroll freely up and down
  from there (thanks Iceman).

--Running an empty search on the house list page now returns you to your value
  neighborhood on the house list instead of jumping back to the top of the list
  (thanks Jere).

--Much improved object and tool picker that displays a drop down menu showing
  the top six items on the stack.

--Trapdoor is now CLOSED in edit mode, making it much easier to walk around
  your house, and also fixing some inconsitencies (trapdoors that were closed
  at the end of a damage-saving robbery were stuck closed in edit mode---now
  ALL trapdoors are closed in edit mode).

--Warning on edit screen about timeout.  Reworded robbery timeout warning.

--Fixed bug that caused duplication of family members if robber stepped onto
  vault right as shotgun-wife stepped next to vault (so robber succeeded and
  died in same move).

--Fixed signature weaknesses for object groupWith settings and to prevent
  deletion of states (thanks Arakira).

--Optimized use of blur filters during loading, reduced load time by 20%.

--Fixed invisible objects in saved map shots ('+' key) from tape playback page.

--Fixed get_self_test_log admin call to work with v22 house list changes.

--Made pausing during deadly times safer by ensuring that pending network 
  requests still get processed (thanks David Rhinehart).





Version 31a  Live Server Fixes

--Server support for returning a starting house list page around the player's
  house value (auto-setting how many houses on the list to skip if the client
  provides no skip value).  This works with v32 clients to auto-set the first
  house page shown, but is also backwards compatible with v31 clients.
